[gd_scene load_steps=7 format=3 uid="uid://bntcxvibf61dw"]

[ext_resource type="PackedScene" uid="uid://crr5lyvamd45" path="res://scenes/snowman_step_0.tscn" id="1_ma8s1"]
[ext_resource type="Script" uid="uid://bxah3ethd12so" path="res://scenes/Snowman.gd" id="1_up3e0"]
[ext_resource type="PackedScene" uid="uid://bsgu84248tnj0" path="res://scenes/snowman_step_1.tscn" id="2_6m2of"]
[ext_resource type="PackedScene" uid="uid://cc61yjpygsoj2" path="res://scenes/snowman_step_2.tscn" id="3_8nwud"]
[ext_resource type="PackedScene" uid="uid://dsr8bo0uqaij1" path="res://scenes/snowman_step_3.tscn" id="4_8rrpe"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ma8s1"]
properties/0/path = NodePath(".:current_step")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Snowman" type="Node3D"]
script = ExtResource("1_up3e0")

[node name="Snowman_step0" parent="." groups=["Snowman"] instance=ExtResource("1_ma8s1")]

[node name="Snowman_step1" parent="." instance=ExtResource("2_6m2of")]
visible = false

[node name="Snowman_step2" parent="." instance=ExtResource("3_8nwud")]
visible = false

[node name="Snowman_step3" parent="." instance=ExtResource("4_8rrpe")]
visible = false

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ma8s1")
